--- a/.github/workflows/daily_commit.yml
+++ b/.github/workflows/daily_commit.yml
@@ -2,7 +2,8 @@ name: Daily Commit
 
 on:
   schedule:
-    - cron: '30 9 * * *'  # every day at 09:30 UTC
+    - cron: '30 9 * * *'  # runs every day at 09:30 UTC
+  workflow_dispatch:      # <- allows manual trigger
 
 jobs:
   daily_commit:
